Bug 121719 - Gradient shows separator borders in slideshow mode
Summary: Gradient shows separator borders in slideshow mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.3 all versions
Hardware: All macOS (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-11-26 13:54 UTC by jl.lesieur@free.fr
Modified: 2018-12-05 17:59 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
The file with the bug !!!! (26.08 KB, application/vnd.oasis.opendocument.presentation)
2018-11-26 13:55 UTC, jl.lesieur@free.fr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jl.lesieur@free.fr 2018-11-26 13:54:16 UTC
Description:
When a gradient have a spécific orientation LibreOffice dont display it correctly.



Steps to Reproduce:
To reproduce this bug :
- Open the file attached with libre office (6.1 on Mac for me).
- Press F5 or «Start slideshow»


Actual Results:
As you can see there are some stripe on the blue form in the center of slide

Expected Results:
I expect to have the same rendering as in «Edit mode».


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Comment 1 jl.lesieur@free.fr 2018-11-26 13:55:01 UTC
Created attachment 147051 [details]
The file with the bug !!!!
Comment 2 Xisco Faulí 2018-11-26 14:30:52 UTC
I can't reproduce it in

Versió: 6.1.3.2
ID de la construcció: 1:6.1.3~rc2-0ubuntu0.16.04.1
Fils de CPU: 4; SO: Linux 4.15; Renderitzador de la IU: per defecte; VCL: gtk3; 
Configuració local: ca-ES (ca_ES.UTF-8); Calc: group threaded
Comment 3 Durgapriyanka 2018-11-26 16:28:16 UTC
Can not reproduce in

Version: 6.0.6.2
Build ID: 0c292870b25a325b5ed35f6b45599d2ea4458e77
CPU threads: 2; OS: Windows 6.1; UI render: default; 
Locale: en-US (en_US); Calc: group
Comment 4 Alex Thurgood 2018-11-28 09:30:49 UTC
With the enclosed test file, I don't see a problem with the gradient per se. As per the properties of the object, the colour gradient is linear and angled at 50°, with linear transparency.

What I do see, and perhaps this is the real object of the bug report is awful lines drawn at 50° to the horizontal separating each change of colour when in display mode. These lines are not visible when editing the slide.

Tested against

Version: 6.1.2.1
Build ID: 65905a128db06ba48db947242809d14d3f9a93fe
Threads CPU : 4; OS : Mac OS X 10.14.1; UI Render : par défaut; 
Locale : fr-FR (fr_FR.UTF-8); Calc: group threaded


@jl.lesieur : is this what you mean by "don't display it properly" ?

Setting NEEDINFO pending requested information.
Comment 5 Alex Thurgood 2018-11-28 09:43:13 UTC
Tested against

Version: 5.2.5.1
Build ID: 0312e1a284a7d50ca85a365c316c7abbf20a4d22
Threads CPU : 4; Version de l'OS :Mac OS X 10.14.1; UI Render : par défaut; 
Locale : fr-FR (fr_FR.UTF-8); Calc: group

No oblique lines are shown in slideshow mode.

==> regression
Comment 6 Alex Thurgood 2018-11-28 09:53:32 UTC
Problem visible in

Version: 5.3.7.2
Build ID: 6b8ed514a9f8b44d37a1b96673cbbdd077e24059
Threads CPU : 4; Version de l'OS :Mac OS X 10.14.1; UI Render : par défaut; Moteur de mise en page : nouveau; 
Locale : fr-FR (fr_FR.UTF-8); Calc: group
Comment 7 Alex Thurgood 2018-11-28 09:55:49 UTC
Also visible in
Version: 5.3.1.2
Build ID: e80a0e0fd1875e1696614d24c32df0f95f03deb2
Threads CPU : 4; Version de l'OS :Mac OS X 10.14.1; UI Render : par défaut; Moteur de mise en page : nouveau; 
Locale : fr-FR (fr_FR.UTF-8); Calc: group
Comment 8 jl.lesieur@free.fr 2018-11-30 17:12:53 UTC
(In reply to Alex Thurgood from comment #4)
> With the enclosed test file, I don't see a problem with the gradient per se.
> As per the properties of the object, the colour gradient is linear and
> angled at 50°, with linear transparency.
> 
> What I do see, and perhaps this is the real object of the bug report is
> awful lines drawn at 50° to the horizontal separating each change of colour
> when in display mode. These lines are not visible when editing the slide.
> 
> Tested against
> 
> Version: 6.1.2.1
> Build ID: 65905a128db06ba48db947242809d14d3f9a93fe
> Threads CPU : 4; OS : Mac OS X 10.14.1; UI Render : par défaut; 
> Locale : fr-FR (fr_FR.UTF-8); Calc: group threaded
> 
> 
> @jl.lesieur : is this what you mean by "don't display it properly" ?
> 
> Setting NEEDINFO pending requested information.

Exactly ! The bug report concern these awfull line drawn in display mode.
Comment 9 Xisco Faulí 2018-12-04 23:35:17 UTC
Regression introduced by:

author	melikeyurtoglu <aysemelikeyurtoglu@gmail.com>	2016-01-31 11:39:20 +0200
committer	jan iversen <jani@documentfoundation.org>	2016-06-09 11:31:11 +0000
commit 258301879bcd20397c38bbd522dea2c923bd9fc2 (patch)
tree 01ee1fe2d3f8df727039c97025e3577575a53e93
parent e420a335f783bb4d2ee9d74d56f91e16d189566f (diff)
tdf#96971 SetXORMode - remove un-needed parameter
Comment 10 Xisco Faulí 2018-12-05 00:29:26 UTC
Patch in gerrit: https://gerrit.libreoffice.org/#/c/64582/
Comment 11 Commit Notification 2018-12-05 07:19:20 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/be504e8c7ef06637f055c43ad350381377df1e90%5E%21

tdf#121719: Revert fix for tdf#96971

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Xisco Faulí 2018-12-05 09:12:57 UTC
Fixed in master. Waiting for https://gerrit.libreoffice.org/#/c/64596/ to be merged to cherry-pick it to 6-2. I don't plan to cherry-pick it to 6-1 branch...
Comment 13 Commit Notification 2018-12-05 17:59:58 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/708da2a6342a58fe379217064848c1c311216f05%5E%21

tdf#121719: Revert fix for tdf#96971

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.