Adapt Qt5Graphics::SetXORMode

...to be504e8c7ef06637f055c43ad350381377df1e90 "tdf#121719: Revert fix for
tdf#96971", which re-introduced the second "bool bInvertOnly" to virtual
SalGraphics::SetXORMode.  It had been removed with
258301879bcd20397c38bbd522dea2c923bd9fc2 "tdf#96971 SetXORMode - remove
un-needed parameter" before the (back then named) Kf5Graphics::SetXORMode
override was introduced with 9335945c7cb215f387ed1444e28533fac437c6e8 "KF5
initial VCL plugin".

Assume that actually ignoring bInvertOnly in the implementation of
Qt5Graphics::SetXORMode is fine (as is done in various other overriding
implementations of SetXORMode, too).

Change-Id: I5481e0884350d02425f3f0356029e7625387656c